# flext-oracle-oic

./: .bandit  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .token  AGENTS.md  CLAUDE.local.md  CLAUDE.md  FLEXT_CORE_MIGRATION_APPLIED.md  Makefile  README.md  TODO.md  __init__.py  api-reference.md  architecture.md  base.mk  config.json  config.json.example  configuration.md  conftest.py  custom.mk  custom.mk.rej  development.md  generate_config.py  getting-started.md  integration.md  mkdocs.yml  pyproject.toml  pyright_errors.json  troubleshooting.md  {}
.scope/: config.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
api-reference/: README.md
config/: oracle_oic.yaml
docs/: ARCHITECTURE.md  README.md  WMS_INTEGRATION.md  api-reference.md  architecture.md  configuration.md  development.md  getting-started.md  index.md  integration.md  testing.md  troubleshooting.md
docs/api-reference/: README.md
docs/architecture/: patterns.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/pydantic-v2-modernization/: audit_pydantic_v2.py
examples/: README.md
guides/: configuration.md  development.md  getting-started.md  security.md  testing.md  troubleshooting.md
oracle_oic_ext/: __init__.py  extension.py  main.py  pass_through.py
oracle_oic_ext/extractors/: __init__.py
oracle_oic_ext/lifecycle/: __init__.py  manager.py
oracle_oic_ext/monitoring/: __init__.py  monitor.py
oracle_oic_ext/transformations/: __init__.py
reports/: pytest.xml
scripts/: generate_config.py  generate_config.py.broken
src/: __init__.py
src/flext_oracle_oic/: __init__.py  __init__.pyi  __main__.py  __version__.py  _config.py  _exports.py  _exports_lazy_part_01.py  _settings.py  api.py  cli.py  config.py  constants.py  container.py  exceptions.py  ext_client.py  ext_config.py  ext_exceptions.py  ext_services.py  extension.py  factory.py  main.py  models.py  protocols.py  service.py  settings.py  typings.py  utilities.py  version.py
src/flext_oracle_oic/_models/: __init__.py  config.py
src/flext_oracle_oic/_utilities/: __init__.py  api_request_builder.py  authentication_validation.py  cli.py  connection_validation.py  monitoring.py  oracle_oic.py  pattern_analysis.py
src/flext_oracle_oic/config/: oracle-oic.yaml
src/flext_oracle_oic/services/: __init__.py  auth.py  base.py  integration_crud.py  integration_lifecycle.py  integration_patterns.py  monitoring.py  orchestration.py
src/flext_oracle_oic_ext/: __init__.py  __version__.py  api.py  cli.py  config.py  constants.py  container.py  exceptions.py  ext_client.py  ext_config.py  ext_exceptions.py  ext_models.py  ext_services.py  extension.py  factory.py  legacy.py  main.py  manager.py  models.py  monitor.py  oic_patterns.py  pass_through.py  protocols.py  simple_api.py  typings.py  utilities.py  version.py
src/flext_oracle_oic_ext/extractors/: __init__.py
src/flext_oracle_oic_ext/infrastructure/: di_container.py
src/flext_oracle_oic_ext/lifecycle/: __init__.py  manager.py
src/flext_oracle_oic_ext/monitoring/: __init__.py  monitor.py
src/flext_oracle_oic_ext/patterns/: __init__.py  oic_patterns.py
src/flext_oracle_oic_ext/transformations/: __init__.py
src/oracle_oic_ext/: __init__.py  __version__.py
tests/: __init__.py  base.py  conftest.py  constants.py  models.py  protocols.py  settings.py  test_basic.py  test_basic_import.py  test_cli.py  test_config.py  test_container.py  test_e2e.py  test_e2e_complete.py  test_exceptions.py  test_ext_client.py  test_ext_services.py  test_extension.py  test_factory.py  test_generate_config.py  test_generate_config.py.disabled  test_import.py  test_main.py  test_models.py  test_typings.py  typings.py  utilities.py
tests/unit/: __init__.py  test_basic.py  test_cli.py  test_config.py  test_ext_client.py  test_ext_services.py  test_extension.py  test_import.py  test_main.py  test_models.py  test_typings.py  test_version.py
