[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "flext-oracle-oic-ext"
version = "0.7.0"
description = "FLEXT Oracle OIC Extension - Advanced Oracle Integration Cloud Extensions"
authors = [{ name = "FLEXT Team", email = "team@flext.sh" }]
maintainers = [{ name = "FLEXT Team", email = "team@flext.sh" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Oracle OIC Extension specific dependencies
    "meltano-edk @ git+https://github.com/meltano/edk.git@a7ab9e7",
    "requests>=2.32.0",
    "oracledb>=2.4.1",
    "sqlalchemy>=2.0.0",

    # Core libraries
    "pydantic>=2.11.0",
    "pydantic-settings>=2.7.0",
    "structlog>=25.0.0",
    "click>=8.1.7",
    "python-dateutil>=2.9.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "cryptography>=44.0.0",
    "orjson>=3.10.0",
]
keywords = ["flext", "oracle", "oic", "extension", "integration", "enterprise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/flext-sh/flext"
Repository = "https://github.com/flext-sh/flext"
Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"

[project.scripts]
oracle-oic-ext = "flext_oracle_oic_ext.cli:main"
flext-oracle-oic-ext = "flext_oracle_oic_ext.cli:main"

[tool.poetry]
name = "flext-oracle-oic-ext"
version = "0.7.0"
description = "FLEXT Oracle OIC Extension - Advanced Oracle Integration Cloud Extensions"
authors = ["FLEXT Team <team@flext.sh>"]
readme = "README.md"
packages = [{ include = "flext_oracle_oic_ext", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

# Core FLEXT dependencies - primary source of truth
flext-core = { path = "../flext-core", develop = true }
flext-observability = { path = "../flext-observability", develop = true }

# Oracle OIC Extension specific dependencies
meltano-edk = { git = "https://github.com/meltano/edk.git", rev = "a7ab9e7" }
requests = ">=2.32.0"
oracledb = ">=2.4.1"
sqlalchemy = ">=2.0.0"
python-dateutil = ">=2.9.0"
httpx = ">=0.28.0"
tenacity = ">=9.0.0"
cryptography = ">=44.0.0"
orjson = ">=3.10.0"

[tool.poetry.group.dev.dependencies]
# Development dependencies
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.12.0"
pytest-xdist = ">=3.6.0"
pytest-timeout = ">=2.3.1"
pytest-sugar = ">=1.0.0"
pytest-clarity = ">=1.0.1"
pytest-benchmark = ">=4.0.0"

# Code quality
ruff = ">=0.8.0"
mypy = ">=1.13.0"
pre-commit = ">=4.0.0"
bandit = ">=1.8.0"

# Documentation
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
mkdocs-mermaid2-plugin = ">=1.1.0"

[tool.poetry.scripts]
oracle-oic-ext = "flext_oracle_oic_ext.cli:main"

# Project-specific tool configurations
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=flext_oracle_oic_ext",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:reports/coverage",
    "--cov-report=xml:reports/coverage.xml",
    "--cov-fail-under=90",
    "--maxfail=1",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "smoke: Smoke tests",
    "e2e: End-to-end tests",
    "oic: marks tests as Oracle Integration Cloud tests",
    "extension: marks tests as extension tests",
    "lifecycle: marks tests as lifecycle tests",
    "monitoring: marks tests as monitoring tests",
    "requires_oic: tests that need Oracle Integration Cloud access",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"

# Ruff configuration - focused on src/ and tests/
[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    # Line length and formatting (handled by formatter)
    "E501",    # line too long
    "W505",    # doc line too long
    "COM812",  # trailing comma missing (conflicts with formatter)
    "ISC001",  # single line implicit string concatenation
    
    # Documentation style flexibility  
    "D100",    # missing docstring in public module
    "D101",    # missing docstring in public class
    "D102",    # missing docstring in public method
    "D103",    # missing docstring in public function
    "D104",    # missing docstring in public package
    "D105",    # missing docstring in magic method
    "D106",    # missing docstring in public nested class
    "D107",    # missing docstring in __init__
    "D203",    # blank line before class docstring (conflicts with D211)
    "D213",    # multi-line docstring summary second line (conflicts with D212)
    "D401",    # non-imperative-mood - Technical descriptions preferred
    
    # Oracle OIC Extension-specific patterns
    "ARG001",  # unused-function-argument - Typer CLI pattern
    "ARG002",  # unused-method-argument - Meltano EDK interface compliance
    "ANN002",  # missing-type-annotation-args - EDK uses *args pattern
    "ANN201",  # missing-return-type-annotation - Test functions
    "ANN401",  # any-type - Meltano EDK requires Any types
    "PLC0415", # import-outside-top-level - Dynamic imports for extensions
    "FBT001",  # boolean-positional-argument - CLI/Test parameters
    "FBT002",  # boolean-default-value-positional-argument
    "FBT003",  # boolean-positional-value-in-call - Typer Options
    "RUF001",  # ambiguous-unicode-character - OAuth scopes may have special chars
    "S108",    # hardcoded-temp-file - Extension exports use temp paths
    "S105",    # hardcoded-password-string - Test fixtures need sample secrets
    "S107",    # hardcoded-password-string - Development defaults
    "PTH123",  # open-without-encoding - Path.open() not always suitable
    "E402",    # module-import-not-at-top-of-file - Some imports need conditions
    "B008",    # function-call-in-default-argument - Typer Arguments
    "B017",    # assert-raises-exception - Generic exception tests
    "SLF001",  # private-member-accessed - Test introspection
    "G004",    # logging-f-string - Better error messages
    "TRY401",  # redundant-exception - Explicit logging
    "TRY300",  # try-consider-else - Error handling patterns
    "S605",    # start-process-with-shell - Test setup commands
    
    # Code style flexibility
    "ERA001",  # commented-out-code - Development annotations
    "TD002",   # missing-todo-author
    "TD003",   # missing-issue-link-in-todo
    "FIX002",  # line-contains-todo
    "T201",    # print - CLI output
    "T203",    # pprint - Debugging
    "S603",    # subprocess-without-shell-equals-true - CLI commands
    "S607",    # start-process-with-partial-path - python subprocess
    
    # Complexity (handled case by case)
    "C901",    # function-too-complex - Extension command handlers
    "PLR0913", # too-many-arguments - OIC operations need many params
    "PLR0915", # too-many-statements
    "PLR2004", # magic-value-used-in-comparison
    "PLR0912", # too-many-branches - Command dispatching
    "PLR0911", # too-many-return-statements
    
    # Import management
    "F401",    # unused-import - __init__.py re-exports
    "F403",    # star-import - __init__.py patterns
    "F405",    # star-import-usage
    
    # Type checking flexibility
    "ANN001",  # missing-type-annotation - Tests use fixtures
    
    # Error handling patterns
    "EM101",   # raw-string-in-exception
    "EM102",   # f-string-in-exception
    "TRY002",  # raise-vanilla-exception - Test helpers
    "TRY003",  # raise-vanilla-exception-with-message
    "TRY301",  # raise-within-try
    "BLE001",  # blind-except - Extension error recovery
    
    # Test-specific patterns
    "S101",    # assert - Tests and type guards
    "SIM117",  # multiple-with-statements - Complex test mocking
    "PT011",   # pytest-raises-too-broad - Testing error handling
    "PT012",   # pytest-raises-with-multiple-statements
]

# Test-specific ignores
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D102", "N801", "N802", "N806", "PLR2004", "F401", "PLC0415", "G004", "T201"]
"**/tests/*.py" = ["S101", "D102", "N801", "N802", "N806", "PLR2004", "F401", "PLC0415", "G004", "T201"]
"test_*.py" = ["S101", "D102", "N801", "N802", "N806", "PLR2004", "F401", "PLC0415", "G004", "T201"]
"**/test_*.py" = ["S101", "D102", "N801", "N802", "N806", "PLR2004", "F401", "PLC0415", "G004", "T201"]


# Auto-generated files - exclude from ALL linting
"**/proto/*_pb2.py" = ["ALL"]
"**/proto/*_pb2_grpc.py" = ["ALL"]
"**/*_pb2.py" = ["ALL"]
"**/*_pb2_grpc.py" = ["ALL"]
"**/generated/**/*.py" = ["ALL"]
[tool.ruff.lint.isort]
known-first-party = ["flext_oracle_oic_ext", "flext_core", "flext_observability"]
force-single-line = false
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration - focused on src/ and tests/
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Paths to check
files = ["src", "tests"]

# Import discovery
namespace_packages = true
explicit_package_bases = true

# Error output
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Disable specific checks for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# External library stubs
[[tool.mypy.overrides]]
module = [
    "meltano_edk.*",
    "requests.*",
    "oracledb.*",
    "sqlalchemy.*",
    "tenacity.*",
    "httpx.*",
    "cryptography.*",
]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
