[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=1.9.0",
    ]

[project]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Typing :: Typed",
    ]
    dependencies = [
        "httpx (>=0.28.1)",
        "meltano[edk] (>=3.0.0)",
        "pydantic (>=2.12.3)",
        "pydantic-settings (>=2.11.0)",
        "requests (>=2.31.0)",
        "tenacity (>=9.1.2)",
        "typer (>=0.12.0)",
        "urllib3 (>=2.0.0)",
        "pydantic-core (>=2.41.4)",
    ]
    description = "FLEXT Oracle OIC Extension - Advanced Oracle Integration Cloud Extensions"
    keywords = [
        "adapter",
        "enterprise",
        "flext",
        "integration",
        "typed",
    ]
    name = "flext-oracle-oic"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.10.0-dev"
    [[project.authors]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [[project.maintainers]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [project.license]
        text = "MIT"

    [project.urls]
        Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
        Homepage      = "https://github.com/flext-sh/flext"
        Repository    = "https://github.com/flext-sh/flext"

    [project.scripts]
        flext-oracle-oic = "flext_oracle_oic.cli:main"
        oracle-oic-ext       = "flext_oracle_oic.cli:main"

[tool.ruff]
    extend = "../ruff-shared.toml"

[tool.poetry]
    [[tool.poetry.packages]]
        from    = "src"
        include = "flext_oracle_oic"

[tool.deptry]
    known_first_party = [
        "flext_oracle_oic",
        "flext_core",
        "flext_observability",
    ]
    pep621_dev_dependency_groups = [
        "dev",
        "test",
        "typings",
        "security",
    ]

[tool.deptry.per_rule_ignores]
    DEP002 = [
        # CLI tools (invoked from command line, not imported)
        "autoflake",
        "bandit",
        "black",
        "codespell",
        "commitizen",
        "detect-secrets",
        "isort",
        "pip-audit",
        "pre-commit",
        "pylint",
        "pyrefly",
        "pyupgrade",
        "radon",
        "ruff",
        "vulture",
        # Type stubs
        "types-psutil",
        "types-python-dateutil",
        "types-pyyaml",
        "types-redis",
        "types-requests",
        "types-setuptools",
        "types-toml",
        # Runtime deps used indirectly (via httpx, pydantic, meltano)
        "faker",
        "httpx",
        "meltano",
        "meltano-edk",
        "pydantic-core",
        "pytest",
        "pytest-cov",
        "requests",
        "tenacity",
        "typer",
        "urllib3",
    ]

    [tool.poetry.dependencies]
        python = ">=3.13,<3.14"

[tool.pytest.ini_options]
    addopts = [
        "--cov-branch",
        "--cov-fail-under=90",
        "--cov-report=html:reports/coverage",
        "--cov-report=term-missing:skip-covered",
        "--cov-report=xml:reports/coverage.xml",
        "--cov=flext_oracle_oic",
        "--maxfail=1",
        "--strict-config",
        "--strict-markers",
        "--tb=short",
        "-ra",
    ]
    markers = [
        "e2e: End-to-end tests",
        "integration: Integration tests",
        "slow: Slow tests",
        "smoke: Smoke tests",
        "unit: Unit tests",
    ]
    minversion = "8.0"
    testpaths = [
        "tests",
    ]


    [tool.ruff.lint.isort]
        known-first-party = [
            "flext_oracle_oic",
        ]

        [tool.poetry.dependencies.flext-core]
            develop = true
            path    = "../flext-core"

                                                                                [tool.poetry.dependencies.flext-observability]
            develop = true
            path    = "../flext-observability"

    [tool.poetry.group.dev.dependencies]
        autoflake      = ">=2.3.1"
        black          = ">=25.1.0"
        codespell      = ">=2.3.0"
        commitizen     = ">=4.8.3"
        detect-secrets = ">=1.5.0"
        isort          = ">=6.0.1"
        pre-commit     = ">=4.0.1"
        pylint         = ">=3.3.0"
        pyrefly        = "^0.46.3"
        pyupgrade      = ">=3.19.0"
        radon          = ">=6.0.1"
        ruff           = ">=0.12.3"
        vulture        = ">=2.13"
        meltano-edk    = {git = "https://github.com/meltano/edk.git"}
    pytest-cov = "^7.0.0"
    pytest = "^9.0.2"
    opentelemetry-api = ">=1.39.1"
    opentelemetry-sdk = ">=1.39.1"
    prompt-toolkit = ">=3.0.52"
    sqlparse = ">=0.5.5"

    [tool.poetry.group.test.dependencies]
        
        
factory-boy         = ">=3.3.1"
        faker               = ">=37.4.0"
        hypothesis          = ">=6.125.0"
        pytest              = ">=8.4.0"
        pytest-benchmark    = ">=5.1.0"
        pytest-clarity      = ">=1.0.1"
        pytest-cov = ">=7.0.0"
        pytest-deadfixtures = ">=2.2.1"
        pytest-env          = ">=1.1.5"
        pytest-mock         = ">=3.14.0"
        pytest-sugar        = ">=1.0.0"
        pytest-timeout      = ">=2.4.0"
        pytest-xdist        = ">=3.8.0"

    [tool.poetry.group.typings.dependencies]
        types-psutil          = ">=7.0.0"
        types-python-dateutil = ">=2.9.0"
        types-pyyaml          = ">=6.0.12"
        types-redis           = ">=4.6.0"
        types-requests        = ">=2.32.4"
        types-setuptools      = ">=80.9.0"
        types-toml            = ">=0.10.8.20240310"

    [tool.poetry.group.security.dependencies]
        bandit    = ">=1.8.0"
        pip-audit = ">=2.7.3"
